Use toJson() and convert to js object
Signed-off-by: Joern Bernhardt <jb@campudus.com>

--- a/src/main/resources/vertx-js/template/js.templ
+++ b/src/main/resources/vertx-js/template/js.templ
@@ -195,7 +195,7 @@ new @{returnType.raw.simpleName}(@includeNamed{templ})
 	@else{returnType.kind == CLASS_ENUM}
 (@includeNamed{templ}).toString()
 	@else{returnType.kind == CLASS_OPTIONS}
-new @{returnType.raw.simpleName}(@includeNamed{templ})
+utils.convReturnJson(@includeNamed{templ}.toJson())
 	@else{}
 	@comment{'This will probably happen if the return type is generic'}
 utils.convReturnTypeUnknown(@includeNamed{templ})
