Cleanup + generate doc to cheatsheets from jsdoc

--- a/src/main/resources/vertx-js/template/common.templ
+++ b/src/main/resources/vertx-js/template/common.templ
@@ -6,14 +6,15 @@
     var rawType = link.targetType.raw;
     if (rawType.module != null) {
       var label = link.label.trim();
-      if (label.length() > 0) {
-        label = "[" + label + "] ";
-      } else {
-        label = "";
-      }
       if (rawType.kind == CLASS_DATA_OBJECT) {
-        return label + "{@link " + "http://www.google.com" + "}";
+        if (label.length() == 0) {
+          label = rawType.simpleName;
+        }
+        return "<a href=\"../../cheatsheet/" + rawType.simpleName + ".html\">" + label + "</a>";
       } else {
+        if (label.length() > 0) {
+          label = "[" + label + "] ";
+        }
         var elt = link.targetElement;
         var jsType = rawType.simpleName;
         var kind = elt.getKind().name();
