--- a/src/main/resources/vertx-js/template/common.templ
+++ b/src/main/resources/vertx-js/template/common.templ
@@ -1,7 +1,10 @@
 @comment{'various stuff'}
-
+@includeNamed{'/vertx-java/template/common-lib.templ'}
 @code{
-
+  /**
+   * Render a tag link to an html link, this function is used as parameter of the
+   * renderDocToHtml function when it needs to render tag links.
+   */
   def renderLinkToHtml(link) {
     var rawType = link.targetType.raw;
     if (rawType.module != null) {
@@ -27,36 +30,5 @@
         }
       }
     }
-  }
-
-  def renderDocToHtml(margin, doc) {
-    var need = true;
-    var html = new StringBuilder();
-    for (token : doc.tokens) {
-      if (need) {
-        html.append(margin);
-        need = false;
-      }
-      if (token.lineBreak) {
-        html.append("\n");
-        need = true;
-      } else {
-        if (token.text) {
-          html.append(token.value);
-        } else {
-          var tag = token.tag;
-          if (tag instanceof io.vertx.codegen.doc.Tag$Link) {
-            var link = renderLinkToHtml(tag);
-            html.append(link);
-          } else if (tag.name == "code") {
-            html.append("<code>").append(tag.value.trim()).append("</code>");
-          }
-        }
-      }
-    }
-    if (!need) {
-      html.append("\n");
-    }
-    return html.toString();
   }
 }
